[package]
name = "direct_fio"
version = "0.1.0"
authors = ["Dmytro Lysai <d@emphased.net>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
async-trait = "0.1.31"
dashmap = "3.11.1"
evmap = "10.0.2"
matches = "0.1.8"
page_size = "0.4.2"
parking_lot = "0.10.2"
static_assertions = "1.1.0"

[dependencies.tokio]
git = "https://github.com/pingw33n/tokio"
branch = "rwlock_try"
features = ["blocking", "macros", "rt-threaded", "sync"]

[dev-dependencies]
byteorder = "1.3.4"
itertools = "0.9.0"
lazy_static = "1.4.0"
rand = "0.7.3"
tempfile = "3.1.0"

[target.'cfg(not(msvc))'.dev-dependencies]
jemallocator = { version = "0.3.2", features = ["debug"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.69"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"

[build-dependencies]
cfg_aliases = "0.1.0"